k8s/dev/app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    istio-injection: enabled
