k8s/dev/traefik-strip-path-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-v1
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api/v1/user
      - /api/v1/auth
      - /api/v1/media
      - /api/v1/match
      - /api/v1/chat
