k8s/dev/traefik-validate-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jwt-auth
  namespace: default
spec:
  forwardAuth:
    address: http://validate-service.default.svc.cluster.local/validate
    trustForwardHeader: true
    authResponseHeaders:
      - "X-User-Id"
      - "X-User-Role"
