k8s/dev/chat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: chat-service-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: ClusterIP
  selector:
    app: chat-service
  ports:
    - port: 4004
      targetPort: 4004
