k8s/dev/discovery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
        version: v1
    spec:
      containers:
        - name: discovery-service
          image: discovery-service-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4010
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: discovery-service
  ports:
    - name: http
      port: 4010
      targetPort: 4010
    - name: grpc
      port: 50052
      targetPort: 50052
