k8s/dev/es-worker-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-worker-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es-worker-service
  template:
    metadata:
      labels:
        app: es-worker-service
        version: v1
    spec:
      containers:
        - name: es-worker-service
          image: es-worker-service-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4010
---
apiVersion: v1
kind: Service
metadata:
  name: es-worker-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: es-worker-service
  ports:
    - port: 4011
      targetPort: 4011
