k8s/dev/gateway-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      containers:
        - name: gateway-server
          image: gateway-server-image:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
spec:
  type: NodePort
  selector:
    app: gateway-server
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30080
