k8s/dev/local-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ExternalName
  externalName: host.lima.internal
  ports:
    - port: 3000
      targetPort: 3000
