k8s/dev/match-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: match-service
  template:
    metadata:
      labels:
        app: match-service
    spec:
      containers:
        - name: match-service
          image: match-service-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: match-service
spec:
  type: ClusterIP
  selector:
    app: match-service
  ports:
    - name: http
      port: 4005
      targetPort: 4005
    - name: grpc
      port: 50055
      targetPort: 50055
