k8s/dev/moderation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-service
  template:
    metadata:
      labels:
        app: moderation-service
        version: v1
    spec:
      containers:
        - name: moderation-service
          image: moderation-service-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4012
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: moderation-service
  ports:
    - name: http
      port: 4012
      targetPort: 4012
    - name: grpc
      port: 50052
      targetPort: 50052
