k8s/dev/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
        version: v1
    spec:
      containers:
        - name: notification-service
          image: notification-service-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4006
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - port: 4006
      targetPort: 4006
