k8s/dev/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
        version: v1
    spec:
      containers:
        - name: payment-service
          image: payment-service-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4010
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - name: http
      port: 4010
      targetPort: 4010
