k8s/dev/ping-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ping-server
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command: [ "bash", "-c", "apt update && apt install -y iputils-ping && sleep infinity" ]
      securityContext:
        privileged: true

---
apiVersion: v1
kind: Service
metadata:
  name: ping-service
spec:
  type: ClusterIP
  selector:
    app: ping-server
  ports:
    - port: 80
      targetPort: 80
