k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i4you-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/enable-websockets: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - i4you.local.net
      secretName: i4you-local-tls
  rules:
    - host: i4you.local.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway-server
                port:
                  number: 4000
          - path: /api-docs
            pathType: Prefix
            backend:
              service:
                name: gateway-server
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
